tests/testFiles/semanticErrors/usevarbeforedecl.meme
ermahgerd a = b + 10;

ermahgerd b = 4;
